examples/test/testpolicy5317.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5317
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key19: value49
      key46: value25
      key31: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value1
      podSelector:
        matchLabels:
          key12: value37
